--- a/wysi/text.css
+++ b/wysi/text.css
@@ -119,6 +119,7 @@ header {
 	position: absolute;
 	cursor: pointer;
 	z-index: 11;
+	top: 0;
 	text-decoration:none;
 }
 [contenteditable=true] a[target=lightbox]:hover::after {
