--- a/wysi/style.css
+++ b/wysi/style.css
@@ -7,8 +7,6 @@ body > .CodeMirror {
 	outline: 1px solid rgb(77,144,254);
 }
 
-i.fa {cursor: default;}
-
 
 button, input[type=button], input[type=submit], .dropdown > button {
 	display: inline-block;
@@ -68,7 +66,7 @@ input.error {outline: 1px solid red}
 }
 
 /*.toolbar .dropdown > :last-child > li { padding: 4px;}*/
-.dropdown.hover > :last-child > li { display: block; padding: 6px 1.2em; }
+.dropdown.hover > :last-child > li { display: block; padding: .5em 1.2em; }
 .dropdown.hover > :last-child > li i { pointer-events: none; }
 
 .toolbar .selected, 
@@ -214,7 +212,7 @@ input.error {outline: 1px solid red}
 }
 
 .dropdown > button.selected + *,
-.dropdown.hover:hover:not(.hide) > :last-child {
+:not([disabled]) > .dropdown.hover:hover:not(.hide) > :last-child {
 	visibility: visible;
 	opacity: 1;
 	transform: scaleY(1);
@@ -314,13 +312,24 @@ input.error {outline: 1px solid red}
 	white-space: normal;
 	left: -138px;
 	opacity: .8;
+	display: flex;
+	flex-wrap: wrap;
 }
 .toolbar.xs .icon-picker.dropdown > :last-child {left: -42px;}
 .icon-picker > .scroll > .fa {
 	font-size: 150%;
-	margin: 4px;
 	cursor: pointer;
-	width: 25px;
+	text-align: center;
+	color: rgba(50,50,50,.8);
+	height: 1.3em;
+	flex: 1 1 1.3em;
+}
+.icon-picker > .scroll > .fa:hover {
+	color: rgba(0,0,200,.8);
+	transition: all .3s;
+}
+.icon-picker .fa::before {
+	vertical-align: middle;
 }
 
 /** table  (picker, tools and resizer) **/
@@ -610,7 +619,7 @@ input.error {outline: 1px solid red}
 
 .scroll {overflow-y: auto; overflow-x: hidden;}
 .dropdown > .scroll {max-height: 100px;}
-.toolbar .dropdown > .scroll {max-height: 180px;}
+.toolbar .dropdown > .scroll {max-height: 220px;}
 
 .CodeMirror-vscrollbar::-webkit-scrollbar, 
 .scroll::-webkit-scrollbar { width: 5px; }
