--- a/wysi/text.css
+++ b/wysi/text.css
@@ -118,7 +118,7 @@ header {
 	position: absolute;
 	cursor: pointer;
 	z-index: 11;
-	top: 0;
+	bottom: 6px;
 	text-decoration:none;
 }
 [contenteditable=true] a[target=lightbox]:hover::after {
