--- a/wysi/style.css
+++ b/wysi/style.css
@@ -13,6 +13,9 @@ body > .CodeMirror {
 	z-index: 7;
 	outline: 1px solid rgb(77,144,254);
 }
+body .wysi {
+	font-family: Arial;
+}
 
 
 button, input[type=button], input[type=submit], .dropdown > button {
@@ -39,6 +42,7 @@ input.error {outline: 1px solid red}
 	position: absolute;
 	transform: translate(45%,-100px);
 	transform-origin: 0 100%;
+	top: 0;
 	/*left: -999px;*/
 	border: var(--border);
 	background: var(--bg);
@@ -241,6 +245,7 @@ input.error {outline: 1px solid red}
 }
 .tabs > .labels > * {
 	height: 1.2em;
+	font-size: 90%;
 	white-space: nowrap;
 	cursor: default;
 	flex: 1;
@@ -429,7 +434,7 @@ input.error {outline: 1px solid red}
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	left: 0;
+	left: -10px;
 	right: 0;
 	cursor: default;
 }
