--- a/wysi/style.css
+++ b/wysi/style.css
@@ -50,6 +50,7 @@ input.error {outline: 1px solid red}
 	border-radius: 2px;
 	z-index: 12;
 	white-space: nowrap;
+	display: flex;
 	user-select: none;
 	-moz-user-select: none;
 	-webkit-user-select: none;
